--- a/chat-app/src/App.css
+++ b/chat-app/src/App.css
@@ -1,283 +1,221 @@
+.bd-placeholder-img {
+  font-size: 1.125rem;
+  text-anchor: middle;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
 
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
+}
 
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
-        }
-      }
+.b-example-divider {
+  width: 100%;
+  height: 3rem;
+  background-color: rgba(0, 0, 0, .1);
+  border: solid rgba(0, 0, 0, .15);
+  border-width: 1px 0;
+  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+}
 
-      .b-example-divider {
-        width: 100%;
-        height: 3rem;
-        background-color: rgba(0, 0, 0, .1);
-        border: solid rgba(0, 0, 0, .15);
-        border-width: 1px 0;
-        box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-      }
+.b-example-vr {
+  flex-shrink: 0;
+  width: 1.5rem;
+  height: 100vh;
+}
 
-      .b-example-vr {
-        flex-shrink: 0;
-        width: 1.5rem;
-        height: 100vh;
-      }
+.bi {
+  vertical-align: -.125em;
+  fill: currentColor;
+}
 
-      .bi {
-        vertical-align: -.125em;
-        fill: currentColor;
-      }
+.nav-scroller {
+  position: relative;
+  z-index: 2;
+  height: 2.75rem;
+  overflow-y: hidden;
+}
 
-      .nav-scroller {
-        position: relative;
-        z-index: 2;
-        height: 2.75rem;
-        overflow-y: hidden;
-      }
+.nav-scroller .nav {
+  display: flex;
+  flex-wrap: nowrap;
+  padding-bottom: 1rem;
+  margin-top: -1px;
+  overflow-x: auto;
+  text-align: center;
+  white-space: nowrap;
+  -webkit-overflow-scrolling: touch;
+}
 
-      .nav-scroller .nav {
-        display: flex;
-        flex-wrap: nowrap;
-        padding-bottom: 1rem;
-        margin-top: -1px;
-        overflow-x: auto;
-        text-align: center;
-        white-space: nowrap;
-        -webkit-overflow-scrolling: touch;
-      }
+.btn-bd-primary {
+  --bd-violet-bg: #712cf9;
+  --bd-violet-rgb: 112.520718, 44.062154, 249.437846;
 
-      .btn-bd-primary {
-        --bd-violet-bg: #712cf9;
-        --bd-violet-rgb: 112.520718, 44.062154, 249.437846;
+  --bs-btn-font-weight: 600;
+  --bs-btn-color: var(--bs-white);
+  --bs-btn-bg: var(--bd-violet-bg);
+  --bs-btn-border-color: var(--bd-violet-bg);
+  --bs-btn-hover-color: var(--bs-white);
+  --bs-btn-hover-bg: #6528e0;
+  --bs-btn-hover-border-color: #6528e0;
+  --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
+  --bs-btn-active-color: var(--bs-btn-hover-color);
+  --bs-btn-active-bg: #5a23c8;
+  --bs-btn-active-border-color: #5a23c8;
+}
 
-        --bs-btn-font-weight: 600;
-        --bs-btn-color: var(--bs-white);
-        --bs-btn-bg: var(--bd-violet-bg);
-        --bs-btn-border-color: var(--bd-violet-bg);
-        --bs-btn-hover-color: var(--bs-white);
-        --bs-btn-hover-bg: #6528e0;
-        --bs-btn-hover-border-color: #6528e0;
-        --bs-btn-focus-shadow-rgb: var(--bd-violet-rgb);
-        --bs-btn-active-color: var(--bs-btn-hover-color);
-        --bs-btn-active-bg: #5a23c8;
-        --bs-btn-active-border-color: #5a23c8;
-      }
+.bd-mode-toggle {
+  z-index: 1500;
+}
 
-      .bd-mode-toggle 
-      {
-        z-index: 1500;
-      }
+.bd-mode-toggle .dropdown-menu .active .bi {
+  display: block !important;
+}
 
-      .bd-mode-toggle .dropdown-menu .active .bi {
-        display: block !important;
-      }
+.container {
+  width: 500px;
+}
 
-      .container
-      {
-        width: 500px;
-      }
+.forgot {
+  text-decoration: none;
+}
 
-    .forgot{
-      text-decoration: none;
-     }
-     .forgot:hover{
-      text-decoration: underline;
-     }
+.forgot:hover {
+  text-decoration: underline;
+}
 
-     .my-container
-     {
-        width: 100vw;
-        height: 100vh;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        position: fixed;
-        border: 3px solid red;
-        background: rgba(49,49,49,0,8);
-     }
-     .my-container-contant{
-      position: absolute;
-      top: 40%;
-      left: 50%;
-      transform: translate(-50%,-50%);
-      line-height: 1.4;
-      background: #f1f1f1;
-      padding: 14px 28px;
-      border-radius: 3px;
-      max-width: 600px;
-      min-width: 300px;
-      border: 3px solid black;
-     }
+.my-container {
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  position: fixed;
+  border: 3px solid red;
+  background: rgba(49, 49, 49, 0.8);
+}
 
-     .containerr
-     {
-      margin-top: 5%;
-      right: 20%;
-      left: 20%;
-      padding: 5%;
-      position:absolute;
-     }
+.my-container-contant {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  line-height: 1.4;
+  background: #f1f1f1;
+  padding: 14px 28px;
+  border-radius: 3px;
+  max-width: 600px;
+  min-width: 300px;
+  border: 3px solid black;
+}
 
-html,body 
-{
+.containerr {
+  margin-top: 5%;
+  right: 20%;
+  left: 20%;
+  padding: 5%;
+  position: absolute;
+}
+
+html, body {
   height: 100%;
   width: 100%;
 }
 
-     /* .box
-     {
-       display: flex;
-       flex-direction: row;
-       height: 100vh;
-       border: 3px solid pink;
-     }
+.you {
+  position: absolute;
+  width: 23vw;
+  padding: 2vh;
+  bottom: 3vh;
+}
 
-     .box1
-     {
-        background-color: white;
-        display: flex;
-        color: black;
-        flex-direction: column;
-        flex-wrap: wrap;
-        align-items: center;
-        width:35vh;
-        padding: 10px;
-        padding-top: 5px;
-     }
+.contacts {
+  height: 32rem;
+  margin-left: 1rem;
+}
 
+.box {
+  border: 3px solid pink;
+  height: 97vh;
+}
 
+.chating {
+  height: 32rem;
+  margin-top: 2rem;
+  overflow-y: auto;
+  scrollbar-width: none;
+}
 
-     .box2
-     {
-      width: 200vh;
-       display: flex;
-       color: black;
-       background-color: rgb(209, 229, 246);
-       flex-direction: column;
-       align-items: center;
-       padding: 10%;
-       padding-top: 5px;
-     }
+.my-btn {
+  border: 1px solid gray;
+  margin: 0;
+  width: fit-content;
+  color: rgb(0, 221, 255);
+}
 
-     .you
-     {
-        position: absolute;
-        width: 23vb;
-        padding: 2vh;
-        bottom: 3vh;
-     }
+.blank {
+  margin-top: 20rem;
+}
 
-     .contacts{
-       border: 3px solid black;
-     }
+.right {
+  color: aqua;
+  display: flex;
+  flex-direction: row-reverse;
+}
 
-     .message
-     {
-      display: flex;
-      flex-direction: row;
-      align-items: center;
-      position: absolute;
-      bottom: 0vh;
-      margin-bottom: 35px;
-      width: 60vb;
-     } */
+.left {
+  color: white;
+  flex-direction: row;
+}
 
-     .you
-     {
-        position: absolute;
-        width: 23vb;
-        padding: 2vh;
-        bottom: 3vh;
-     }
+.send {
+  border: 2px solid green;
+  border-radius: 10px;
+  max-width: 20rem;
+  height: fit-content;
+  margin: 3px;
+  padding: 2px;
+  overflow-wrap: break-word;
+  scroll-behavior: smooth;
+  margin: 4px;
+  font-size: 1.3rem;
+  background-color: rgb(89, 136, 172);
+}
 
-     .contacts{
-      height: 32rem;
-      margin-left: 1rem;
-    }
-     .box
-     {
-        border: 3px solid pink;
-        height: 97vh;
-     }
+.recieve {
+  border: 1px solid rgb(198, 221, 145);
+  border-radius: 10px;
+  width: fit-content;
+  max-width: 25rem;
+  height: fit-content;
+  margin: 4px;
+  overflow-wrap: break-word;
+  padding: 4px;
+  font-size: 1.3rem;
+  background-color: rgba(53, 48, 48, 0.615);
+}
 
-     .chating{
-       height: 32rem;
-       margin-top: 2rem;
-       overflow-y: auto;
-       scrollbar-width: none;
-     }
-     .my-btn{
-      border: 1px solid gray;
-        margin: 0;
-        width:fit-content;
-        color: rgb(0, 221, 255);
-     }
-     
-     .blank{
-      margin-top: 20rem;
-     }
+.online {
+  background-color: green;
+}
 
-     .right{
-       color:aqua;
-       display: flex;
-       flex-direction: row-reverse;
-     }
+.offline {
+  background-color: purple;
+}
 
-     .left{
-      color: white;
-      flex-direction: row;
-     }
+.selected {
+  border: 3px solid white;
+}
 
-     .send{
-       border: 2px solid green;
-       border-radius: 10px;
-        max-width: 20rem;
-        height: fit-content;
-        margin: 3px;
-        padding: 2px;
-        overflow-wrap: break-word;
-        scroll-behavior: smooth;
-        margin: 4px;
-        font-size: 1.3rem;
-        background-color: rgb(89, 136, 172);
-     }
+body {
+  overflow: hidden;
+}
 
-     .recieve{
-      border: 1px solid rgb(198, 221, 145);
-      border-radius: 10px;
-      width: fit-content;
-      max-width: 25rem;
-      height: fit-content;
-      margin: 4px;
-      overflow-wrap: break-word;
-      padding: 4px;
-      font-size: 1.3rem;
-      background-color: rgba(53, 48, 48, 0.615);
-     }
-
-     .online{
-        background-color: green;
-     }
-
-     .offline{
-      background-color: purple;
-     }
-
-     .selected{
-       border: 3px solid white;
-     }
-
-     body{
-      overflow: hidden;
-     }
-
-     .box{
-      overflow: auto;
-      scrollbar-width: none;
-     }
+.box {
+  overflow: auto;
+  scrollbar-width: none;
+}
